# MangaOcen

./: .gitattributes  desu_city_downloader_image.py  desu_city_parcer_links.py  git_push.py  git_push.py~  grand_blue_images.txt  index.html  sort_manga.py
ACoupleofCuckoo's/html/: chapter_1.html  chapter_10.html  chapter_100.html  chapter_101.html  chapter_102.html  chapter_103.html  chapter_104.html  chapter_105.html  chapter_106.html  chapter_107.html  chapter_108.html  chapter_109.html  chapter_11.html  chapter_110.html  chapter_111.html  chapter_112.html  chapter_113.html  chapter_114.html  chapter_115.html  chapter_116.html  chapter_117.html  chapter_118.html  chapter_119.html  chapter_12.html  chapter_120.html  chapter_121.html  chapter_122.html  chapter_123.html  chapter_124.html  chapter_125.html  chapter_126.html  chapter_127.html  chapter_128.html  chapter_129.html  chapter_13.html  chapter_130.html  chapter_131.html  chapter_132.html  chapter_133.html  chapter_134.html  (+171 more)
DevTools/: desu_city_html_generate.py  mangalib_git_commit.py  mangalib_html_generator.py  mangalib_parcer.py  old_mangalib_parcer.py  template.html  universal_git_commit.py  universal_git_commit.py~  universal_html_generator.py  universal_html_generator.py~  unpacking_cbr.py
DevTools/comx/: application.h  main.cpp
DevTools/comx_parcer/: CMakeLists.txt  application.cpp
GrandBlue/: html_generate.py  html_generate.py~
GrandBlue/chapters/: chapter_001.html  chapter_002.html  chapter_003.html  (+245 more)
Onepunchman/: mangalib_parcer.py  mangalib_parcer.py~
Thefiveweddedbrides/: mangalib_parcer.py~
(+569 files in other folders)
